# $Id$

2006-09-25	Konstantin V. Arkhipov

	* meta/builders/ProtoClassBuilder.class.php: corrected handling of
	parent's identifiers (if any).

	* meta/builders/ProtoClassBuilder.class.php: inheritance support
	implemented, useless constructor and private property dropped.

	* meta/classes/MetaClass.class.php: try to resolve parent's identifier
	in cases where child doesn't own one, arrived from trunk.

2006-08-23	Konstantin V. Arkhipov

	* * core/Cache/PeclMemcached.class.php: several stfu's from trunk.

2006-08-18	Konstantin V. Arkhipov

	* main/Containers/StorableContainer.class.php: backported
	getIdsList() fix from trunk.

2006-08-17	Konstantin V. Arkhipov

	* 0.4.9 released.

2006-08-08	Konstantin V. Arkhipov

	* core/DB/, meta/builders/: now php-5.2 compatible, backported from
	trunk.

2006-07-21	Konstantin V. Arkhipov

	* 0.4.8 released.

2006-07-17	Konstantin V. Arkhipov

	* meta/: synced with trunk: DTD update, identifier's shortcut.

2006-07-12	Konstantin V. Arkhipov

	* core/Form/Form.class.php: getTexturalErrors() is deprecated in
	favour of getTextualErrors().

2006-06-29	Konstantin V. Arkhipov

	* main/DAOs/ObjectQuery.class.php: final now, as is trunk.

2006-06-28	Konstantin V. Arkhipov

	* meta/builders/ProtoClassBuilder.class.php: removed generation of
	deprecated getForm() method.

2006-06-25	Konstantin V. Arkhipov

	* core/Form/RemoveSymbolsFilter.class.php: deprecated by
	StringReplaceFilter, already removed in 0.5.

	* core/Form/PrimitiveRange.class.php: fixed finally and partially
	synced with trunk.

	* 0.4.7 released.

2006-06-24	Anton E. Lebedevich
	
	* main/Utils/TextUtils.class.php: UrlSafeBase64Encode(),
	UrlSafeBase64Decode() added.

	* main/Utils/TextUtils.class.php: getHostFromUrl(), getPathFromUrl()
	added.

2006-06-22	Konstantin V. Arkhipov

	* main/DAOs/ObjectQuery.class.php: SQLArray support implemented.

2006-06-17	Konstantin V. Arkhipov

	* main/Flow/EditorController.class.php: uses makeForm() now.
